--- a/index.html
+++ b/index.html
@@ -16,7 +16,25 @@
     <div class="weather">
         <img src="image/Rainy.png" class="weather-icon">
         <h1 class="temp">22℃</h1>
+        <h2 class="city">New York</h2>
+        <div class="details">
+            <div class="col">
+                <img src="image/Humidity.png" >
+                <div>
+                    <p class="Humidity">50%</p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+            <div class="col">
+                <img src="image/Wind.png" >
+                <div>
+                    <p class="Wind">15 km/h</p>
+                    <p>Wind Speed</p>
+                </div>
+            </div>
+        </div>
     </div>
     </div>
+
 </body>
 </html>
