--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
         </div>
     </div>
     </div>
+    <script>
+        const apiKey = "620ed00421578479d9c1dc3a0aac9f40";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore";
 
+        async function checkWeather(){
+            const response = await fetch(apiUrl + `&appid=${apiKey}`);//fetch URL and add API Key to it
+            var data = await response.json();// data variable will hold the information from this city
+
+            console.log(data);
+
+            document.querySelector(".city").innerHTML = data.name;
+            document.querySelector(".temp").innerHTML = data.main.temp + "℃";
+            document.querySelector(".Humidity").innerHTML = data.main.humidity + "%";
+            document.querySelector(".Wind").innerHTML = data.wind.speed + " km/h";
+            // document.querySelector(".city").innerHTML = data.name;
+        }
+        checkWeather();
+    </script>
 </body>
 </html>
