--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <body>
     <div class="card">
         <div class="search">
-            <input type="text" placeholder="enter city name" spellcheck="false">
+            <input type="text" placeholder="Enter city name" spellcheck="false">
             <button><img src="image/Search.png" ></button>
+        </div>
+        <div class="error">
+            <p>Invalid city name</p>
         </div>
     <div class="weather">
         <img src="image/Rainy.png" class="weather-icon">
@@ -37,21 +40,53 @@
     </div>
     <script>
         const apiKey = "620ed00421578479d9c1dc3a0aac9f40";
-        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=bangalore";
+        const apiUrl = "https://api.openweathermap.org/data/2.5/weather?units=metric&q=";
+        
+        const searchBox = document.querySelector(".search input");
+        const searchBtn = document.querySelector(".search button");
 
-        async function checkWeather(){
-            const response = await fetch(apiUrl + `&appid=${apiKey}`);//fetch URL and add API Key to it
-            var data = await response.json();// data variable will hold the information from this city
+        const weatherIcon = document.querySelector(".weather-icon");
 
-            console.log(data);
+        async function checkWeather(city){
+            const response = await fetch(apiUrl + city + `&appid=${apiKey}`);//fetch URL and add API Key to it
 
-            document.querySelector(".city").innerHTML = data.name;
-            document.querySelector(".temp").innerHTML = data.main.temp + "℃";
-            document.querySelector(".Humidity").innerHTML = data.main.humidity + "%";
-            document.querySelector(".Wind").innerHTML = data.wind.speed + " km/h";
-            // document.querySelector(".city").innerHTML = data.name;
+            if(response.status == 404){
+                document.querySelector(".error").style.display = "block";
+                document.querySelector(".weather").style.display = "none";
+            }else{
+                var data = await response.json();// data variable will hold the information from this city
+
+
+                document.querySelector(".city").innerHTML = data.name;
+                document.querySelector(".temp").innerHTML = Math.round(data.main.temp) + "℃";
+                document.querySelector(".Humidity").innerHTML = data.main.humidity + "%";
+                document.querySelector(".Wind").innerHTML = data.wind.speed + " km/h";
+                // document.querySelector(".city").innerHTML = data.name;
+
+                if(data.weather[0].main == "Clouds"){
+                    weatherIcon.src = "image/Cloudy.png";
+                }else if(data.weather[0].main == "Clear"){
+                    weatherIcon.src = "image/Sunny.png";
+                }else if(data.weather[0].main == "Rain"){
+                    weatherIcon.src = "image/Rainy.png";
+                }else if(data.weather[0].main == "Drizzle"){
+                    weatherIcon.src = "image/Drizzle.png";
+                }else if(data.weather[0].main == "Mist"){
+                    weatherIcon.src = "image/Mist.png";
+                }else if (data.weather[0].main == "Snow"){
+                    weatherIcon.src = "image/Snow.png";
+                }
+
+                document.querySelector(".weather").style.display = "block";
+                document.querySelector(".error").style.display = "none";
+            }
+
         }
-        checkWeather();
+
+        searchBtn.addEventListener("click",()=>{
+            checkWeather(searchBox.value);
+        })
+       
     </script>
 </body>
 </html>
